--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 03:59:00 AM</p>
+    <p class="lastupdate">09/06/2020 04:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">72.2&#176;F</td>
+        <td class="data">72.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">72.2&#176;F</td>
+        <td class="data">72.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">72.2&#176;F</td>
+        <td class="data">72.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.2&#176;F</td>
+        <td class="data">47.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">41%</td>
+        <td class="data">42%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.914 inHg (-0.005)</td>
+        <td class="data">29.912 inHg (-0.005)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph WNW (292&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -90,7 +90,7 @@
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">33%</td>
+        <td class="data">32%</td>
       </tr>
     </tbody>
   </table>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:21 AM">
             82.3</span><br/>
-          <span title="03:58:09 AM">
-            72.2</span>
+          <span title="04:00:01 AM">
+            72.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:21 AM (Sunday)">
             82.3</span><br/>
-          <span title="03:58:09 AM (Sunday)">
-            72.2</span>
+          <span title="04:00:01 AM (Sunday)">
+            72.1</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="03:58:09 AM" class="loval">
-            72.2</span>
+          <span title="04:00:01 AM" class="loval">
+            72.1</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:58:09 AM (Sunday)" class="loval">
-            72.2</span>
+          <span title="04:00:01 AM (Sunday)" class="loval">
+            72.1</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 13 hours, 12 minutes</td>
+      <td class="data">4 days, 13 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 13 hours, 12 minutes</td>
+      <td class="data">4 days, 13 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
