--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 04:09:00 AM</p>
+    <p class="lastupdate">09/06/2020 04:14:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">72.4&#176;F</td>
+        <td class="data">72.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">72.4&#176;F</td>
+        <td class="data">72.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">72.4&#176;F</td>
+        <td class="data">72.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">48.0&#176;F</td>
+        <td class="data">47.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">42%</td>
+        <td class="data">41%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.916 inHg (-0.002)</td>
+        <td class="data">29.912 inHg (-0.003)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph WNW (292&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -90,7 +90,7 @@
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">32%</td>
+        <td class="data">33%</td>
       </tr>
     </tbody>
   </table>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          321
+          320
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          321
+          320
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 13 hours, 22 minutes</td>
+      <td class="data">4 days, 13 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 13 hours, 22 minutes</td>
+      <td class="data">4 days, 13 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
