--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 04:49:00 AM</p>
+    <p class="lastupdate">09/06/2020 04:54:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">71.5&#176;F</td>
+        <td class="data">71.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">71.5&#176;F</td>
+        <td class="data">71.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">71.5&#176;F</td>
+        <td class="data">71.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.2&#176;F</td>
+        <td class="data">47.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">42%</td>
+        <td class="data">43%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.914 inHg (0.000)</td>
+        <td class="data">29.913 inHg (0.001)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph WNW (292&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -90,7 +90,7 @@
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">33%</td>
+        <td class="data">34%</td>
       </tr>
     </tbody>
   </table>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:21 AM">
             82.3</span><br/>
-          <span title="04:47:00 AM">
-            71.5</span>
+          <span title="04:49:55 AM">
+            71.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:21 AM (Sunday)">
             82.3</span><br/>
-          <span title="04:47:00 AM (Sunday)">
-            71.5</span>
+          <span title="04:49:55 AM (Sunday)">
+            71.4</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="04:47:00 AM" class="loval">
-            71.5</span>
+          <span title="04:49:55 AM" class="loval">
+            71.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:47:00 AM (Sunday)" class="loval">
-            71.5</span>
+          <span title="04:49:55 AM (Sunday)" class="loval">
+            71.4</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="03:39:49 AM">
-            42</span><br/>
+          <span title="04:49:53 AM">
+            43</span><br/>
           <span title="12:00:19 AM">
             27</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:39:49 AM (Sunday)">
-            42</span><br/>
+          <span title="04:49:53 AM (Sunday)">
+            43</span><br/>
           <span title="12:00:19 AM (Sunday)">
             27</span>
         </td>
@@ -407,9 +407,9 @@
       <tr>
         <td class="label">Wind Average</td>
         <td class="data new_row hilo_day">
-          1</td>
+          0</td>
         <td class="data new_row hilo_week">
-          1</td>
+          0</td>
         <td class="data new_row hilo_month">
           2</td>
         <td class="data new_row hilo_year">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          318
+          317
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          318
+          317
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 14 hours, 2 minutes</td>
+      <td class="data">4 days, 14 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 14 hours, 2 minutes</td>
+      <td class="data">4 days, 14 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
