--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 04:54:00 AM</p>
+    <p class="lastupdate">09/06/2020 04:59:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.913 inHg (0.001)</td>
+        <td class="data">29.915 inHg (0.001)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph WNW (292&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">81.6&#176;F</td>
+        <td class="data">81.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:21 AM">
             82.3</span><br/>
-          <span title="04:49:55 AM">
-            71.4</span>
+          <span title="04:55:03 AM">
+            71.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:21 AM (Sunday)">
             82.3</span><br/>
-          <span title="04:49:55 AM (Sunday)">
-            71.4</span>
+          <span title="04:55:03 AM (Sunday)">
+            71.3</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="04:49:55 AM" class="loval">
-            71.4</span>
+          <span title="04:55:03 AM" class="loval">
+            71.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:49:55 AM (Sunday)" class="loval">
-            71.4</span>
+          <span title="04:55:03 AM (Sunday)" class="loval">
+            71.3</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 14 hours, 7 minutes</td>
+      <td class="data">4 days, 14 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 14 hours, 7 minutes</td>
+      <td class="data">4 days, 14 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
