--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 05:34:00 AM</p>
+    <p class="lastupdate">09/06/2020 05:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">69.6&#176;F</td>
+        <td class="data">69.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">69.6&#176;F</td>
+        <td class="data">69.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">69.6&#176;F</td>
+        <td class="data">69.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.7&#176;F</td>
+        <td class="data">47.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">44%</td>
+        <td class="data">45%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.920 inHg (0.002)</td>
+        <td class="data">29.912 inHg (-0.007)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph WNW (292&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">81.4&#176;F</td>
+        <td class="data">81.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:21 AM">
             82.3</span><br/>
-          <span title="05:31:45 AM">
-            69.6</span>
+          <span title="05:34:51 AM">
+            69.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:21 AM (Sunday)">
             82.3</span><br/>
-          <span title="05:31:45 AM (Sunday)">
-            69.6</span>
+          <span title="05:34:51 AM (Sunday)">
+            69.5</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="05:31:45 AM" class="loval">
-            69.6</span>
+          <span title="05:34:51 AM" class="loval">
+            69.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="05:31:45 AM (Sunday)" class="loval">
-            69.6</span>
+          <span title="05:34:51 AM (Sunday)" class="loval">
+            69.5</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -440,15 +440,15 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          317
+          316
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          317
+          316
         </td>
         <td class="data new_row hilo_month">
           1<br/>
-          1
+          0
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 14 hours, 47 minutes</td>
+      <td class="data">4 days, 14 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 14 hours, 47 minutes</td>
+      <td class="data">4 days, 14 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
