--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 06:14:00 AM</p>
+    <p class="lastupdate">09/06/2020 06:19:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">68.8&#176;F</td>
+        <td class="data">68.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">68.8&#176;F</td>
+        <td class="data">68.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">68.8&#176;F</td>
+        <td class="data">68.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.2&#176;F</td>
+        <td class="data">46.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">46%</td>
+        <td class="data">45%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.922 inHg (0.006)</td>
+        <td class="data">29.926 inHg (0.008)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">81.0&#176;F</td>
+        <td class="data">80.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">34%</td>
+        <td class="data">33%</td>
       </tr>
     </tbody>
   </table>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:21 AM">
             82.3</span><br/>
-          <span title="06:13:57 AM">
-            68.8</span>
+          <span title="06:18:23 AM">
+            68.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:21 AM (Sunday)">
             82.3</span><br/>
-          <span title="06:13:57 AM (Sunday)">
-            68.8</span>
+          <span title="06:18:23 AM (Sunday)">
+            68.3</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="06:13:57 AM" class="loval">
-            68.8</span>
+          <span title="06:18:23 AM" class="loval">
+            68.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:13:57 AM (Sunday)" class="loval">
-            68.8</span>
+          <span title="06:18:23 AM (Sunday)" class="loval">
+            68.3</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -303,14 +303,14 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="06:07:01 AM">
-            29.924</span><br/>
+          <span title="06:18:01 AM">
+            29.926</span><br/>
           <span title="12:26:01 AM">
             29.907</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:07:01 AM (Sunday)">
-            29.924</span><br/>
+          <span title="06:18:01 AM (Sunday)">
+            29.926</span><br/>
           <span title="12:26:01 AM (Sunday)">
             29.907</span>
         </td>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          316
+          314
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          316
+          314
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 15 hours, 27 minutes</td>
+      <td class="data">4 days, 15 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 15 hours, 27 minutes</td>
+      <td class="data">4 days, 15 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
