--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 06:24:00 AM</p>
+    <p class="lastupdate">09/06/2020 06:29:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">68.0&#176;F</td>
+        <td class="data">67.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">68.0&#176;F</td>
+        <td class="data">67.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">68.0&#176;F</td>
+        <td class="data">67.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.4&#176;F</td>
+        <td class="data">46.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.928 inHg (0.011)</td>
+        <td class="data">29.927 inHg (0.011)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SSW (202&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">80.5&#176;F</td>
+        <td class="data">80.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">33%</td>
+        <td class="data">32%</td>
       </tr>
     </tbody>
   </table>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:21 AM">
             82.3</span><br/>
-          <span title="06:22:29 AM">
-            68.0</span>
+          <span title="06:24:33 AM">
+            67.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:21 AM (Sunday)">
             82.3</span><br/>
-          <span title="06:22:29 AM (Sunday)">
-            68.0</span>
+          <span title="06:24:33 AM (Sunday)">
+            67.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/05/2020 03:12:38 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="06:22:29 AM" class="loval">
-            68.0</span>
+          <span title="06:24:33 AM" class="loval">
+            67.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:22:29 AM (Sunday)" class="loval">
-            68.0</span>
+          <span title="06:24:33 AM (Sunday)" class="loval">
+            67.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -303,14 +303,14 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="06:21:01 AM">
-            29.928</span><br/>
+          <span title="06:24:01 AM">
+            29.929</span><br/>
           <span title="12:26:01 AM">
             29.907</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:21:01 AM (Sunday)">
-            29.928</span><br/>
+          <span title="06:24:01 AM (Sunday)">
+            29.929</span><br/>
           <span title="12:26:01 AM (Sunday)">
             29.907</span>
         </td>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          313
+          311
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          313
+          311
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -472,14 +472,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             85.2</span><br/>
-          <span title="06:23:01 AM">
-            80.5</span>
+          <span title="06:26:01 AM">
+            80.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:01 AM (Sunday)">
             85.2</span><br/>
-          <span title="06:23:01 AM (Sunday)">
-            80.5</span>
+          <span title="06:26:01 AM (Sunday)">
+            80.4</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 04:03:02 PM">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 15 hours, 37 minutes</td>
+      <td class="data">4 days, 15 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 15 hours, 37 minutes</td>
+      <td class="data">4 days, 15 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
