--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 07:09:00 AM</p>
+    <p class="lastupdate">09/06/2020 07:14:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">67.6&#176;F</td>
+        <td class="data">67.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">67.6&#176;F</td>
+        <td class="data">67.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">67.6&#176;F</td>
+        <td class="data">67.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.2&#176;F</td>
+        <td class="data">47.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.941 inHg (0.025)</td>
+        <td class="data">29.940 inHg (0.028)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph W (270&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.0&#176;F</td>
+        <td class="data">77.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="06:41:45 AM">
-            48</span><br/>
+          <span title="07:12:31 AM">
+            49</span><br/>
           <span title="12:00:19 AM">
             27</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:41:45 AM (Sunday)">
-            48</span><br/>
+          <span title="07:12:31 AM (Sunday)">
+            49</span><br/>
           <span title="12:00:19 AM (Sunday)">
             27</span>
         </td>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          309
+          308
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          309
+          308
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -472,14 +472,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             85.2</span><br/>
-          <span title="07:05:01 AM">
-            78.0</span>
+          <span title="07:13:01 AM">
+            77.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:01 AM (Sunday)">
             85.2</span><br/>
-          <span title="07:05:01 AM (Sunday)">
-            78.0</span>
+          <span title="07:13:01 AM (Sunday)">
+            77.7</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 04:03:02 PM">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 16 hours, 22 minutes</td>
+      <td class="data">4 days, 16 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 16 hours, 22 minutes</td>
+      <td class="data">4 days, 16 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
